--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -1,5 +1,16 @@
 <div class="container">
-  <h1 class="themecolor align-center mb-2"><i>Angular Datepicker</i></h1>
+  <header class="header">
+    <h2 class="themecolor align-center mb-2"><i>Angular Custom Datepicker</i></h2>
+    <div class="link-container">
+      <a class="npm-badge" href="https://www.npmjs.com/package/angular-custom-datepicker" target="_blank" rel="noopener noreferrer">
+        <img src="https://img.shields.io/badge/-NPM-cc0a0a?logo=npm&logoColor=white&style=for-the-badge" alt="NPM Badge">
+      </a>
+      <a class="npm-badge" href="https://github.com/dds05/angular-custom-datepicker" target="_blank" rel="noopener noreferrer">
+        <img src="https://img.shields.io/badge/-GitHub-181717?logo=github&logoColor=white&style=for-the-badge"
+          alt="GitHub Badge">
+      </a>
+    </div>
+  </header>
   <div class="d-flex ai-c">
     <div class="width-40">
       <date-picker
