--- a/src/app/components/home/home/home.component.scss
+++ b/src/app/components/home/home/home.component.scss
@@ -2,9 +2,6 @@
   width: 19rem;
 }
 
-.mb-2 {
-  margin-bottom: 1.4rem;
-}
 .d-flex {
   display: flex;
 }
@@ -16,7 +13,6 @@
 
 .container {
   background-color: aliceblue;
-  padding: 2rem;
   height: 100vh;
 }
 
@@ -26,4 +22,27 @@
 
 .themecolor {
   color: #0974ad;
+}
+
+
+.header {
+  background-color: #ffffff;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  position: sticky;
+  top: 0;
+  z-index: 50;
+  padding: 1rem 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 2rem;
+}
+
+
+.link-container > img:hover{
+  cursor: pointer;
+}
+
+.npm-badge{
+  margin: 0 5px;
 }
